hphp/test/slow/error_handler/errorMessages.php.expectf
Deprecated: E_USER_DEPRECATED in %s/slow/error_handler/errorMessages.php on line 3
Fatal error: E_USER_ERROR in %s/slow/error_handler/errorMessages.php on line 4
